--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
     <!-- Application Script -->
     <script src="app/app.js"></script>
+
+    <!-- Product Controllers -->
+    <script src="app/products/productListCtrl.js"></script>
 </head>
 <body ng-app="productManagement">
 <table ng-init='products=[
