--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <!-- Library Scripts -->
     <script src="js/angular.js"></script>
+    <script src="js/angular-mocks.js"></script>
     <script src="js/angular-resource.js"></script>
 
     <!-- Application Script -->
@@ -18,6 +19,7 @@
     <!--Services-->
     <script src="common/services/common.services.js"></script>
     <script src="common/services/productResource.js"></script>
+    <script src="common/services/productResourceMock.js"></script>
 
     <!-- Product Controllers -->
     <script src="app/products/productListCtrl.js"></script>
