--- a/app/products/productListView.html
+++ b/app/products/productListView.html
@@ -23,10 +23,16 @@
                     <img ng-if="vm.showImage" ng-src="{{product.imageUrl}}" style="width:50px;margin: 20px"
                          title="{{product.productName}}">
                 </td>
-                <td>{{product.productName}}</td>
+                <td><a ui-sref="productDetail({productId: product.productId})">{{product.productName}}</a></td>
                 <td>{{product.productCode}}</td>
                 <td>{{product.releaseDate}}</td>
                 <td>{{product.price | currency}}</td>
+                <td>
+                    <a class="btn btn-primary"
+                       ui-sref="productEdit({productId: product.productId})">
+                        Edit
+                    </a>
+                </td>
             </tr>
             </tbody>
         </table>
