--- a/app/products/productEditInfoView.html
+++ b/app/products/productEditInfoView.html
@@ -1,1 +1,21 @@
-<div>Basic Product Information</div>
+<form name="productForm" class="form-horizontal">
+    <fieldset>
+        <legend>Basic Product Infomation</legend>
+        <div class="form-group">
+            <label for="inputProductName" class="col-md-2 control-label">Product Name</label>
+
+            <div class="col-md-4">
+                <input class="form-control" id="inputProductName" type="text" placeholder="Product Name"
+                       ng-model="vm.product.productName"/>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="inputDescription" class="col-md-2 control-label">Description</label>
+
+            <div class="col-md-10">
+            <textarea class="form-control" id="inputDescription" placeholder="Description" rows="3"
+                      ng-model="vm.product.description"/>
+            </div>
+        </div>
+    </fieldset>
+</form>
