--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="js/angular-resource.js"></script>
     <script src="js/angular-ui-router.js"></script>
     <script src="js/bootstrap.js"></script>
+    <script src="js/mask.js"></script>
 
     <!-- Application Script -->
     <script src="app/app.js"></script>
