Added ui bootstrap datepicker control.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- Style sheets -->
     <link href="css/bootstrap.css" rel="stylesheet"/>
     <link href="css/app.css" rel="stylesheet"/>
+    <link href="css/datepicker.css" rel="stylesheet"/>
 
     <!-- Library Scripts -->
     <script src="js/jquery-2.2.1.js"></script>
@@ -16,6 +17,7 @@
     <script src="js/angular-ui-router.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/mask.js"></script>
+    <script src="js/datepicker.js"></script>
 
     <!-- Application Script -->
     <script src="app/app.js"></script>
