--- a/app/products/productEditInfoView.html
+++ b/app/products/productEditInfoView.html
@@ -10,18 +10,33 @@
             </div>
         </div>
         <div class="form-group">
+            <label class="col-md-2 control-label" for="inputProductCode">Product Code</label>
+
+            <div class="col-md-4">
+                <input class="form-control" id="inputProductCode" ui-mask="AAA-****" ng-model="vm.product.productCode">
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-md-2 control-label" for="inputAvailabilityDate">Availability</label>
+
+            <div class="col-md-4">
+                <div class="input-group">
+                    <input class="form-control" id="inputAvailabilityDate" type="text" datepicker-popup="MMM dd, yyyy"
+                           ng-model="vm.product.releaseDate"/>
+                    <span class="input-group-btn">
+                        <button class="btn btn-default">
+                            <i class="glyphicon glyphicon-calendar"/>
+                        </button>
+                    </span>
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
             <label for="inputDescription" class="col-md-2 control-label">Description</label>
 
             <div class="col-md-10">
             <textarea class="form-control" id="inputDescription" placeholder="Description" rows="3"
                       ng-model="vm.product.description"/>
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-md-2 control-label" for="inputProductCode">Product Code</label>
-
-            <div class="col-md-4">
-                <input class="form-control" id="inputProductCode" ui-mask="AAA-****" ng-model="vm.product.productCode">
             </div>
         </div>
     </fieldset>
