Project with old libraries as references.

--- a/app/products/productEditInfoView.html
+++ b/app/products/productEditInfoView.html
@@ -22,7 +22,7 @@
             <div class="col-md-4">
                 <div class="input-group">
                     <input class="form-control" id="inputAvailabilityDate" type="text"
-                           uib-datepicker-popup="MMM dd, yyyy"
+                           datepicker-popup="MMM dd, yyyy"
                            is-open="vm.opened"
                            ng-model="vm.product.releaseDate"/>
                     <span class="input-group-btn">
