--- a/index.html
+++ b/index.html
@@ -17,10 +17,8 @@
     <script src="js/angular-ui-router.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/mask.js"></script>
-    <script src="js/ui-bootstrap-tpls-1.2.5.js"></script>
-    <script src="js/angular-animate.js"></script>
-    <script src="js/angular-touch.js"></script>
-    <script src="js/datepicker.js"></script>
+    <script src="js/ui-utils.js"></script>
+    <script src="js/ui-bootstrap-tpls-0.11.0.js"></script>
 
     <!-- Application Script -->
     <script src="app/app.js"></script>
