Added validation messages.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <!-- Style sheets -->
     <link href="css/bootstrap.css" rel="stylesheet"/>
+    <link href="css/toastr.less" rel="stylesheet"/>
     <link href="css/app.css" rel="stylesheet"/>
     <link href="css/datepicker.css" rel="stylesheet"/>
 
@@ -16,9 +17,9 @@
     <script src="js/angular-resource.js"></script>
     <script src="js/angular-ui-router.js"></script>
     <script src="js/bootstrap.js"></script>
-    <script src="js/mask.js"></script>
     <script src="js/ui-utils.js"></script>
     <script src="js/ui-bootstrap-tpls-0.11.0.js"></script>
+    <script src="js/toastr.js"></script>
 
     <!-- Application Script -->
     <script src="app/app.js"></script>
