--- a/app/products/productEditInfoView.html
+++ b/app/products/productEditInfoView.html
@@ -1,21 +1,32 @@
-<form name="productForm" class="form-horizontal">
+<form name="productForm" class="form-horizontal" novalidate>
     <fieldset>
         <legend>Basic Product Infomation</legend>
-        <div class="form-group">
+
+        <div class="form-group"
+             ng-class="{'has-error': productForm.inputProductName.$invalid && productForm.inputProductName.$dirty}">
             <label for="inputProductName" class="col-md-2 control-label">Product Name</label>
 
             <div class="col-md-4">
-                <input class="form-control" id="inputProductName" type="text" placeholder="Product Name"
-                       ng-model="vm.product.productName"/>
+                <input class="form-control" id="inputProductName" name="inputProductName" type="text"
+                       placeholder="Product Name (required)"
+                       ng-model="vm.product.productName" required/>
             </div>
+            <span class="help-block has-error"
+                  ng-show="productForm.inputProductName.$invalid">Product name is required.</span>
         </div>
-        <div class="form-group">
+
+        <div class="form-group"
+             ng-class="{'has-error': productForm.inputProductCode.$invalid && productForm.inputProductName.$dirty}">
             <label class="col-md-2 control-label" for="inputProductCode">Product Code</label>
 
             <div class="col-md-4">
-                <input class="form-control" id="inputProductCode" ui-mask="AAA-****" ng-model="vm.product.productCode">
+                <input class="form-control" id="inputProductCode" name="inputProductCode" ui-mask="AAA-**** (required)"
+                       ng-model="vm.product.productCode" required>
             </div>
+            <span class="help-block has-error"
+                  ng-show="productForm.inputProductCode.$invalid">Product code is required.</span>
         </div>
+
         <div class="form-group">
             <label class="col-md-2 control-label" for="inputAvailabilityDate">Availability</label>
 
@@ -34,12 +45,25 @@
                 </div>
             </div>
         </div>
+
         <div class="form-group">
             <label for="inputDescription" class="col-md-2 control-label">Description</label>
 
             <div class="col-md-10">
             <textarea class="form-control" id="inputDescription" placeholder="Description" rows="3"
                       ng-model="vm.product.description"/>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-4 col-md-offset-2">
+                <span>
+                    <button class="btn btn-primary" style="width: 80px;margin-right: 10px" ng-click="vm.submit()">Save
+                    </button>
+                </span>
+                <span>
+                    <button class="btn btn-default" style="width:70px" ng-click="vm.cancel()">Cancel</button>
+                </span>
             </div>
         </div>
     </fieldset>
