--- a/app/products/productEditInfoView.html
+++ b/app/products/productEditInfoView.html
@@ -9,10 +9,22 @@
             <div class="col-md-4">
                 <input class="form-control" id="inputProductName" name="inputProductName" type="text"
                        placeholder="Product Name (required)"
-                       ng-model="vm.product.productName" required/>
+                       ng-model="vm.product.productName" required ng-minlength="4" ng-maxlength="12"/>
             </div>
-            <span class="help-block has-error"
+            <!-- <span class="help-block has-error"
                   ng-show="productForm.inputProductName.$invalid">Product name is required.</span>
+                  -->
+            <span class="help-block has-error">
+                <span ng-show="productForm.inputProductName.$error.required">
+                    Product name is required.
+                </span>
+                 <span ng-show="productForm.inputProductName.$error.minlength">
+                    Must be at least 4 characters in length.
+                </span>
+                 <span ng-show="productForm.inputProductName.$error.maxlength">
+                    Cannot exceed 12 characters in length.
+                </span>
+            </span>
         </div>
 
         <div class="form-group"
@@ -58,7 +70,11 @@
         <div class="form-group">
             <div class="col-md-4 col-md-offset-2">
                 <span>
-                    <button class="btn btn-primary" style="width: 80px;margin-right: 10px" ng-click="vm.submit()">Save
+<!--                    <button class="btn btn-primary" style="width: 80px;margin-right: 10px" ng-click="vm.submit()"
+                            ng-disabled="productForm.$invalid">Save
+                    </button>-->
+                    <button class="btn btn-primary" style="width: 80px;margin-right: 10px"
+                            ng-click="vm.submit(productForm.$valid)">Save
                     </button>
                 </span>
                 <span>
