--- a/app/products/productEditTagsView.html
+++ b/app/products/productEditTagsView.html
@@ -27,7 +27,8 @@
         <div class="form-group">
             <div class="col-md-4 col-md-offset-2">
                 <span>
-                    <button class="btn btn-primary" style="width: 80px;margin-right: 10px" ng-click="vm.submit()">Save
+                    <button class="btn btn-primary" style="width: 80px;margin-right: 10px"
+                            ng-click="vm.submit(productForm.$valid)">Save
                     </button>
                 </span>
                 <span>
