--- a/app/products/productDetailView.html
+++ b/app/products/productDetailView.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-2">Margin:</div>
-                    <div class="col-md-6">{{vm.product.marginPercent | number:0}}</div>
+                    <div class="col-md-6">{{vm.marginPercent | number:0}}</div>
                 </div>
                 <div class="row">
                     <div class="col-md-2">Tags:</div>
@@ -56,7 +56,7 @@
             Back
         </a>
         <a class="btn btn-primary"
-           ui-sref="productEdit({productId: vm.product.productId})"
+           ui-sref="productEdit.info({productId: vm.product.productId})"
            style="width: 80px; margin: 10px">
             Edit
         </a>
