--- a/app/products/productEditPriceView.html
+++ b/app/products/productEditPriceView.html
@@ -15,7 +15,7 @@
             </span>
         </div>
 
-        <div class="form-group" style="margin-bottom: 0px;">
+        <div class="form-group" style="margin-bottom: 0;">
             <label class="col-md-2 control-label">Calculate Price</label>
 
             <div class="col-md-4 btn-group">
@@ -25,6 +25,46 @@
                 <label class="btn btn-default" ng-model="vm.priceOption" btn-radio="'amount'" style="width: 50%">
                     Markup $
                 </label>
+            </div>
+        </div>
+
+        <div class="form-group" ng-if="vm.priceOption=='percent'"
+             ng-class="{'has-error':productPriceForm.inputMarkupPercent.$invalid && productPriceForm.inputMarkupPercent.$dirty}">
+            <div class="col-md-6 col-md-offset-2">
+                <label class="control-label" for="inputMarkupPercent">Markup Percentage</label>
+
+                <div class="form-group row" style="margin-bottom: 0;">
+                    <div class="col-md-4">
+                        <input class="form-control" id="inputMarkupPercent" name="inputMarkupPercent" type="number"
+                               placeholder="Markup %" ng-model="vm.markupPercent" style="text-align: right"/>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-default"
+                                title="Calculate the price based on the code plus % markup."
+                                ng-click="vm.calculatePrice()">Calculate
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group" ng-if="vm.priceOption=='amount'"
+             ng-class="{'has-error':productPriceForm.inputMarkupAmount.$invalid && productPriceForm.inputMarkupAmount.$dirty}">
+            <div class="col-md-6 col-md-offset-2">
+                <label class="control-label" for="inputMarkupAmount">Markup Amount</label>
+
+                <div class="form-group row" style="margin-bottom: 0;">
+                    <div class="col-md-4">
+                        <input class="form-control" id="inputMarkupAmount" name="inputMarkupAmount" type="number"
+                               placeholder="Markup $" ng-model="vm.markupAmount" style="text-align: right"/>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-default"
+                                title="Calculate the price based on the code plus $ markup."
+                                ng-click="vm.calculatePrice()">Calculate
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
     </fieldset>
