--- a/app/products/productEditPriceView.html
+++ b/app/products/productEditPriceView.html
@@ -31,7 +31,7 @@
         <div class="form-group" ng-if="vm.priceOption=='percent'"
              ng-class="{'has-error':productPriceForm.inputMarkupPercent.$invalid && productPriceForm.inputMarkupPercent.$dirty}">
             <div class="col-md-6 col-md-offset-2">
-                <label class="control-label" for="inputMarkupPercent">Markup Percentage</label>
+                <label class="control-label" for="inputMarkupPercent">Markup %</label>
 
                 <div class="form-group row" style="margin-bottom: 0;">
                     <div class="col-md-4">
@@ -51,7 +51,7 @@
         <div class="form-group" ng-if="vm.priceOption=='amount'"
              ng-class="{'has-error':productPriceForm.inputMarkupAmount.$invalid && productPriceForm.inputMarkupAmount.$dirty}">
             <div class="col-md-6 col-md-offset-2">
-                <label class="control-label" for="inputMarkupAmount">Markup Amount</label>
+                <label class="control-label" for="inputMarkupAmount">Markup $</label>
 
                 <div class="form-group row" style="margin-bottom: 0;">
                     <div class="col-md-4">
@@ -65,6 +65,36 @@
                         </button>
                     </div>
                 </div>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="col-md-2 control-label" for="inputPrice">Price</label>
+
+            <div class="col-md-4">
+                <input class="form-control" id="inputPrice" name="inputPrice" type="number" placeholder="Price" required
+                       ng-model="vm.product.price" style="text-align: right"/>
+            </div>
+            <span class="help-block"
+                  ng-show="productPriceForm.inputPrice.$invalid && productPriceForm.inputPrice.$dirty">Price must be a valid number.</span>
+        </div>
+
+        <div class="row">
+            <div class="col-md-2" style="text-align: right">Margin</div>
+            <div class="col-md-4">{{vm.marginPercent() | number:0}}%</div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-4 col-md-offset-2">
+                <span>
+                    <button class="btn btn-primary" style="width: 80px;margin-right: 10px"
+                            ng-disabled="productPriceForm.$invalid"
+                            ng-click="vm.submit(productPriceForm.$valid)">Save
+                    </button>
+                </span>
+                <span>
+                    <button class="btn btn-default" style="width:70px" ng-click="vm.cancel()">Cancel</button>
+                </span>
             </div>
         </div>
     </fieldset>
