Added reference for charting.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="css/toastr.less" rel="stylesheet"/>
     <link href="css/app.css" rel="stylesheet"/>
     <link href="css/datepicker.css" rel="stylesheet"/>
+    <link href="css/styles.css" rel="stylesheet"/>
 
     <!-- Library Scripts -->
     <script src="js/jquery-2.2.1.js"></script>
@@ -20,6 +21,8 @@
     <script src="js/ui-utils.js"></script>
     <script src="js/ui-bootstrap-tpls-0.11.0.js"></script>
     <script src="js/toastr.js"></script>
+    <script src="js/d3.js"></script>
+    <script src="js/angular-charts.js"></script>
 
     <!-- Application Script -->
     <script src="app/app.js"></script>
