--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
     <script src="app/products/productListCtrl.js"></script>
     <script src="app/products/productDetailCtrl.js"></script>
     <script src="app/products/ProductEditCtrl.js"></script>
+
+    <!-- Price Controllers -->
+    <script src="app/prices/priceAnalyticsCtrl.js"></script>
 </head>
 <body ng-app="productManagement">
 <nav class="navbar navbar-inverse">
@@ -54,6 +57,7 @@
             <ul class="nav navbar-nav">
                 <li><a ui-sref="productList">Product List</a></li>
                 <li><a ui-sref="productEdit.info({productId:0})"><i class="glyphicon glyphicon-plus"></i> Add Product</a></li>
+                <li><a ui-sref="priceAnalytics">Price Analytics</a></li>
             </ul>
         </div>
     </div>
